--- a/kitchen.yml
+++ b/kitchen.yml
@@ -15,6 +15,9 @@ transport:
 
 provisioner:
   name: shell
+  data_path: "provisioner/dist"
+  root_path: "/tmp/kitchen"
+  command: "cd /tmp/kitchen/data && chmod u+x bootstrap.sh && ./bootstrap.sh"
 
 platforms:
   - name: ubuntu-20.04
