--- a/kitchen.yml
+++ b/kitchen.yml
@@ -16,7 +16,7 @@ transport:
 provisioner:
   name: shell
   data_path: "provisioner/dist"
-  root_path: "/tmp/kitchen"
+  root_path: "/tmp/kitchen/"
   command: "cd /tmp/kitchen/data && chmod u+x bootstrap.sh && ./bootstrap.sh"
 
 platforms:
