remove features that need Python 3.10
The target environment is Ubuntu 18.04 which only has Python 3.6.9

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -20,6 +20,7 @@ provisioner:
   command: "cd /tmp/kitchen/data && chmod u+x bootstrap.sh && ./bootstrap.sh"
 
 platforms:
+  - name: ubuntu-18.04
   - name: ubuntu-20.04
 
 verifier:
