--- a/test-kitchen/kitchen.yml
+++ b/test-kitchen/kitchen.yml
@@ -2,9 +2,9 @@
 driver:
   name: ec2
   aws_ssh_key_id: "test-kitchen" # managed by configure.sh
-  security_group_ids: [ "sg-012255f4fe60e5ac8" ] # managed by configure.sh
+  security_group_ids: [ "sg-0bbec6f1bb1735b2b" ] # managed by configure.sh
   region: us-west-2
-  subnet_id: "subnet-09b7b37a4b506a13e" # managed by configure.sh
+  subnet_id: "subnet-068c7da8844a936e2" # managed by configure.sh
   instance_type: t3.nano
   associate_public_ip: true
   interface: public
@@ -22,8 +22,9 @@ lifecycle:
     - local: |
         set -x
         mkdir stage
-        (cd ../provisioner && rm dist/provisioner.pyz && make dist/provisioner.pyz)
-        cp ../provisioner/dist/provisioner.pyz stage/provisioner.pyz
+        cd ../provisioner
+        rm -f dist/provisioner.pyz
+        make dist/provisioner.pyz && cp ../provisioner/dist/provisioner.pyz stage/provisioner.pyz
 
 provisioner:
   name: shell
