add JSON structured logging

--- a/provisioner/Makefile
+++ b/provisioner/Makefile
@@ -5,12 +5,13 @@ dist:
 	mkdir -p dist
 
 dist/provisioner.pyz: venv src dist
+	rm -rf build/*
 	mkdir -p build
 	venv/bin/pip3 install -r requirements/prod.txt --target build
 	cp -r src/* build/
 	./venv/bin/python3 -m zipapp build -o dist/provisioner.pyz
 
-venv: requirements/dev.txt
+venv: requirements/dev.txt requirements/prod.txt requirements.txt
 	[ -d venv ] || python3 -m venv venv && venv/bin/pip3 install --upgrade pip
 	venv/bin/pip3 install -r requirements/dev.txt
 
