--- a/test-kitchen/kitchen.yml
+++ b/test-kitchen/kitchen.yml
@@ -2,9 +2,9 @@
 driver:
   name: ec2
   aws_ssh_key_id: "test-kitchen" # managed by configure.sh
-  security_group_ids: [ "sg-074c643ea9af1ee25" ] # managed by configure.sh
+  security_group_ids: [ "sg-0d8929db4812fed4b" ] # managed by configure.sh
   region: us-west-2
-  subnet_id: "subnet-03e10e8a6cbf82fc9" # managed by configure.sh
+  subnet_id: "subnet-09d26e1cf3a99ad4b" # managed by configure.sh
   instance_type: t3.nano
   associate_public_ip: true
   interface: public
@@ -29,7 +29,7 @@ provisioner:
   name: shell
   data_path: "stage/"
   root_path: "/home/ubuntu/"
-  command: "cd /home/ubuntu/data && sudo python3 provisioner.pyz run"
+  command: "cd /home/ubuntu/data && sudo LC_ALL=C.UTF-8 LANG=C.UTF-8 python3 provisioner.pyz run"
 
 platforms:
   - name: ubuntu-18.04
